# WeatherForecast

./: CMakeLists.txt  README.md
lib/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Requests.cpp  Requests.h  cfg.json  makeImage.cpp  makeImage.h
